--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,3 +9,6 @@ log4j.category.org.hibernate.validator.internal.util.Version=WARN
 log4j.category.org.apache.coyote.http11.Http11NioProtocol=WARN
 log4j.category.org.apache.tomcat.util.net.NioSelectorPool=WARN
 log4j.category.org.apache.catalina.startup.DigesterFactory=ERROR
+
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
